[gd_scene load_steps=7 format=3 uid="uid://c82xs8bqsnhfb"]

[ext_resource type="FontFile" uid="uid://q2yhdigwv6d6" path="res://assets/fonts/MagicDecimal-VG4ye.ttf" id="1_gr56i"]
[ext_resource type="Script" path="res://menus/pause_menu.gd" id="1_isihq"]
[ext_resource type="FontFile" uid="uid://bv2i4vi1q1ow2" path="res://assets/fonts/pc-9900-v2.ttf" id="2_rvfef"]
[ext_resource type="AudioStream" uid="uid://baa1tkllfh0n3" path="res://assets/audio/sfx/new/Pause.wav" id="4_1k6sh"]
[ext_resource type="AudioStream" uid="uid://bt4puuxcg74dn" path="res://assets/audio/sfx/new/Melee_Slash.wav" id="5_4a5m8"]
[ext_resource type="AudioStream" uid="uid://2ptquecx4krh" path="res://assets/audio/sfx/new/Player_Shoot.wav" id="6_amigb"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 4
script = ExtResource("1_isihq")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 960.0
color = Color(0, 0, 0, 0.392157)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -192.0
offset_right = 192.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_gr56i")
theme_override_font_sizes/font_size = 84
text = "Paused"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rvfef")
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="BackButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rvfef")
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="PauseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1k6sh")

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_4a5m8")

[node name="ButtonHoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_amigb")
volume_db = -15.0

[connection signal="focus_entered" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/BackButton" to="." method="_on_back_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
